--- a/styles/restaurant-profile.css
+++ b/styles/restaurant-profile.css
@@ -20,6 +20,7 @@ body {
 #tabs {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    font-size: 20pt;
 }
 
 #tab1 {
